import React from 'react';
import GifExpertApp from '../../GifExpertApp';

const { shallow } = require('enzyme');

describe('Pruebas <GifExpertApp />', () => {
	test('Debe mostrar el contenido correctamente', () => {
		const wrapper = shallow(<GifExpertApp />);

		expect(wrapper).toMatchSnapshot();
	});

	test('Debe de mostrar la lista de categorias', () => {
		const categories = ['One Punch', 'Dragon Ball'];
		const wrapper = shallow(<GifExpertApp defaultCategories={categories} />);

		expect(wrapper).toMatchSnapshot();
		expect(wrapper.find('GifGrid').length).toBe(categories.length);
	});
});
